--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/blogpost.css">
 </head>
 <body>
-    <h1>Blog Post</h1>
-    <p>Este es el blog post</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este el titulo atractivo e interesante del post</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
