--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog <span id="tagline">Tu Blog de confianza</span>
+            HyperBlog <span id="tagline">Tu Blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Este el titulo atractivo e interesante del post</h1>
