--- a/blogpost.html
+++ b/blogpost.html
@@ -9,12 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog <span id="tagline">Tu Blog de confianza</span>
+            HyperBlog <span id="tagline">Tu Blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este el titulo atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> <p>
                 Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
