--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ln="es">
 <head>
-    <title>Bienvenido a Hyperblog</title>
+    <title>Bienvenido a Hyperblog 2.0</title>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/blogpost.css">
