--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ln="es">
+<html lang="es">
 <head>
     <title>Bienvenido a Hyperblog 2.0</title>
     <meta charset="utf-8"> 
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes\dragon.png" alt="logo space X">
             HyperBlog <span id="tagline">Tu Blog de cabecera</span>
         </div>
         <div id="post">
@@ -17,6 +18,9 @@
                 Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Suscribete y dale like</p>
         </div>
+    </div>
+    <div id="footer">
+        Hecho con amor en Platzi &lt;3
     </div>
 </body>
 </html>
