se agrego una imagen desde google

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,9 @@
         </div>
         <div id="post">
             <h1>Este el titulo atractivo e interesante del post</h1>
-            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> <p>
-                Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+            <img id="imagen" src="https://lh3.googleusercontent.com/pw/AJFCJaWc34iDNmhmmXPyd1fTYEzH-0CK5ffwr4gGSAhFo7DzhmmEhPi9zZLT0Oc5bVmtmizHxHxqMhNA1Hz7X6q9IVxvLhKVVpahKed5qWgi2iFTZcF6hQT50o392UN2T5UfxNyrKbNPjdRB5j_cO-Xvp_Tc0Ng7ccXHxQIqG3Aibk8pc5NSDba9D-hoj8-R_KJHQekpIde1SHeuWuBtFByloj04M_kaUZEaTSEJC59kazlHQnfBLBQ435rwhkmIah2iio2mcF1lsT152_204Z-rCLhaD3T8s0rSt591RIrIze8qzG0-T2KNT40xLtVv7T12ulzmjtfn4CYAUyNojYZunoETdne_KhL2ypWBUaHCeRITszzesjB0v2s7Bpo_1wWXHsROIWg0GZ-1HmIgW0uL-P4Z53ldO77S78yU79DdK6ZehVsA_H4-OH-YBCxqM_H4QQjId0-yInTO7arEZICtIWuTBFF3XGyMgPmtjcwGWwbuzH4D2LqmcY_IF9GSvZfGWcF8vKgueQ8EMm-CaQaOs6ThVlePGOj5dWbfWcO-vo_HGCqf_tDtoeSkKzb2_9f7oS5IBZkA3WGNV2YqZAI73KvGXlSrQDPOAVsEanchU5UDkNKaKU4BkpHOSLhTip0ftEnfBCdCgNOYGtYupXxX95JY7Rg4H1xjPqHPDEAshwPyO0znKWutUttgn0snReq0i6A8VPbhZ7tIa9_Ug6OXtiDqtlkJFmfxwkBT_ez2WXlQRl5iR7DeFXL48y8bd-n4zRzrRXYQh6Gv0zOJQuAEiBzy9clX4pKPISGpSlsp76U4vFjOS-nlPAWIGxNzFN89vG-qyr5sMikmVoTbenanRY2aSJq8CoqIKRLkgHI6UlBnwR0KPwgTSasqBUKcD9uukuG7DfNdXkisoT6Xgo9QzNbNLog=w373-h663-s-no?authuser=0" alt="imagen">
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
+            <p> Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Suscribete y dale like</p>
         </div>
     </div>
